# MLsem

./: .gitignore  .zenodo.json  LICENSE  Makefile  README.md  README_OOPSLA.md  bench.sh  dune-project  mlsem-app.opam  mlsem-bin.opam  mlsem-common.opam  mlsem-lang.opam  mlsem-lsp.opam  mlsem-system.opam  mlsem-types.opam  mlsem-web.opam  mlsem.opam  test.ml  time.sh  types.ref
.github/workflows/: webeditor.yml
src/common/: common.ml  dune  env.mli
src/main/: dune  js.ml  lib_js.ml  main.ml  prototype.ml  web.ml
src/parsing/: IO.ml  ast.ml  ast.mli  dune  lexer.mll  parser.mly  transform.ml
src/sstt/: LICENSE  README.md  dune-project  sstt-bin.opam  sstt-repl.opam  sstt.opam
src/system/: analyzer.ml  analyzer.mli  annot.ml  annot.mli  ast.ml  ast.mli  caching.ml  caching.mli  checker.ml  checker.mli  domain.ml  domain.mli  env.ml  env.mli  partition.ml  reconstruction.ml  reconstruction.mli  refinement.ml  refinement.mli
src/types/: additions.ml  additions.mli  base.ml  base.mli  dune  gradual.ml  gradual.mli  tvar.ml  tvar.mli  tyScheme.ml  tyScheme.mli
src/utils/: config.ml  dune  utils.ml
tests/: 0_dyn.ml  0_hm.ml  1_hm.ml  1_union_inter.ml  2_dyn.ml  2_mono.ml  3_records.ml  4_all.ml  4_imperative.ml  5_misc.ml  test.ml
tests/artifacts/: oopsla26.ml  rowpoly-oopsla26.ml
tests/benchmarks/: beppe.ml
webeditor/: codelens.js  doc.html  index.html  main.js  tokenizer.js  typechecker.js  version.txt
webeditor/examples/: functional.stml  gradual.stml  imperative.stml  imperative_advanced.stml  list.json  narrowing.stml  oopsla.stml  records.stml
(+95 files in other folders)
